--- a/com.qintess.eventos-webapp/.settings/org.eclipse.wst.common.component
+++ b/com.qintess.eventos-webapp/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="eventos-webapp-0.0.1-SNAPSHOT">
+    <wb-module deploy-name="eventos-webapp">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/eventos-webapp/build/classes"/>
-        <property name="context-root" value="com.qintess.eventos-webapp"/>
+        <property name="java-output-path" value="/com.qintess.eventos-webapp/build/classes"/>
+        <property name="context-root" value="eventos-webapp"/>
     </wb-module>
 </project-modules>
